nginx.ingress.kubernetes.io/auth-signin-snippet
Signed-off-by: Jan-Otto Kröpke <mail@jkroepke.de>

--- a/rootfs/etc/nginx/template/nginx.tmpl
+++ b/rootfs/etc/nginx/template/nginx.tmpl
@@ -765,7 +765,7 @@ stream {
     lua_package_path "/etc/nginx/lua/?.lua;/etc/nginx/lua/vendor/?.lua;;";
 
     lua_shared_dict tcp_udp_configuration_data 5M;
-    
+
     {{ buildResolvers $cfg.Resolver $cfg.DisableIpv6DNS }}
 
     init_by_lua_block {
@@ -1210,6 +1210,8 @@ stream {
             internal;
 
             add_header Set-Cookie $auth_cookie;
+
+            {{ $externalAuth.AuthSigninSnippet }}
 
             {{ if $location.CorsConfig.CorsEnabled }}
             {{ template "CORS" $location }}
